--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Home page</h1>
+    <ul>
+        <li><a href="./lab2/index.html">Link to Lab2</a></li>
+        <li><a href="./lab3/index.html">Link to Lab3</a></li>
+    </ul>
 </body>
 </html>
