--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./lab2/index.html">Link to Lab2</a></li>
         <li><a href="./lab3/index.html">Link to Lab3</a></li>
+        <li><a href="./lab4/index.html">Link to Lab4</a></li>
     </ul>
 </body>
 </html>
