add info to index

--- a/index.html
+++ b/index.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Han-COMP1537</title>
+    <style>
+        #lab{
+            width: 50%;
+            float: left;
+        }
+        #assignment{
+            width: 50%;
+            float: right;
+        }
+    </style>
 </head>
 <body>
-    <h1>Home page</h1>
-    <ul>
-        <li><a href="./lab2/index.html">Link to Lab2</a></li>
-        <li><a href="./lab3/index.html">Link to Lab3</a></li>
-        <li><a href="./lab4/index.html">Link to Lab4</a></li>
-    </ul>
+    <h1 style="text-align: center;">COMP1537</h1>
+    <h2 style="text-align: center;">Hanxiao(Han) Mao <br>#A01293003</h2>
+    <main>
+        <section id="lab">
+            <h3>Labs:</h3>
+            <ul>
+                <li><a href="./lab2/index.html">Link to Lab2</a></li>
+                <li><a href="./lab3/index.html">Link to Lab3</a></li>
+                <li><a href="./lab4/index.html">Link to Lab4</a></li>
+            </ul>
+
+        </section>
+        <section id="assignment">
+            <h3>Assignments:</h3>
+            <ul>
+                <li><a href="#">Link to Assignment1</a></li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
