--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -111,9 +111,9 @@
             <div id='content'>
                 <h3 style="text-align:center ;">Contents</h3>
                 <ol>
-                    <li><a href="">Family</a></li>
-                    <li><a href="">See also</a></li>
-                    <li><a href="">Notes</a></li>
+                    <li><a href="#family">Family</a></li>
+                    <li><a href="#see-also">See also</a></li>
+                    <li><a href="#notes">Notes</a></li>
                 </ol>
             </div>
         </section>
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <div>
-                <h2>Also See</h2>
+                <h2 id="see-also">See Also</h2>
                 <hr>
                 <ul>
                     <li>Anubis Shrine</li>
@@ -154,7 +154,7 @@
                 </ul>
             </div>
             <div>
-                <h2>Notes</h2>
+                <h2 id="notes">Notes</h2>
                 <hr>
                 <ol type="a">
                     <li>The relief depicts a child in the arms of a nurse outside a chamber in which Meketaten is being
