--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
                 <li><a href="./lab2/index.html">Link to Lab2</a></li>
                 <li><a href="./lab3/index.html">Link to Lab3</a></li>
                 <li><a href="./lab4/index.html">Link to Lab4</a></li>
+                <li><a href="./lab5/index.html">Link to Lab5</a></li>
+                <ul>
+                    <li><a href="./lab5/part3.html">Link to Lab5 Part3</a></li>
+                    <li><a href="./lab5/part4.html">Link to Lab5 Part4</a></li>
+                </ul>
+
             </ul>
 
         </section>
         <section id="assignment">
             <h3>Assignments:</h3>
             <ul>
-                <li><a href="#">Link to Assignment1</a></li>
+                <li><a href="./assignment1/index.html">Link to Assignment1</a></li>
             </ul>
         </section>
     </main>
