--- a/lab4/index.html
+++ b/lab4/index.html
@@ -17,7 +17,7 @@
             nav a {
                 text-decoration: none;
                 display: inline-block;
-                padding: 10px;
+                padding: 14px, 16px;
                 color: white;
                 width: 100px;
                 text-align: center;
