--- a/lab4/index.html
+++ b/lab4/index.html
@@ -46,7 +46,7 @@
 
             footer {
                 clear: both; 
-                /* reset the float */
+                /* no float left and right side */
             }
 
             @media screen and (max-width: 500px) {
