--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <h1 style="text-align: center;">COMP1537</h1>
     <h2 style="text-align: center;">Hanxiao(Han) Mao <br>#A01293003</h2>
     <main>
+        <br>
+        <div>
+            <h2>Midterm</h2>
+            <a href="./midterm/index.html">Midterm</a>
+        </div>
         <section id="lab">
             <h3>Labs:</h3>
             <ul>
@@ -41,6 +46,7 @@
                 <li><a href="./assignment1/index.html">Link to Assignment1</a></li>
             </ul>
         </section>
+
     </main>
 </body>
 </html>
