--- a/lab5/part3.html
+++ b/lab5/part3.html
@@ -17,6 +17,7 @@
     </script>
 </head>
 <body>
+    <p>Type in the radius:</p>
     <input type="text" id="radius">
     <input type="submit" id="radius-button">
     <p id="area"></p>
