--- a/lab5/part4.html
+++ b/lab5/part4.html
@@ -29,6 +29,7 @@
     </script>
 </head>
 <body>
+    <p>Enter a year to check if it is leap year:</p>
     <input type="text" id="year_input">
     <input type="submit" id="leap_button">
     <p id="result"></p>
