--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <li><a href="./lab5/part3.html">Link to Lab5 Part3</a></li>
                     <li><a href="./lab5/part4.html">Link to Lab5 Part4</a></li>
                 </ul>
+                <li><a href="./lab6/index.html">Link to Lab6/7</a></li>
 
             </ul>
 
