--- a/lecture7.html
+++ b/lecture7.html
@@ -9,6 +9,8 @@
     <script src="lecture7.js"></script>
 </head>
 <body>
-    
+    <input type="text" id="city">
+    <button id="weatherBtn" value="Click me to get the temperature"></button>
+    <p id="result"></p>
 </body>
 </html>
