--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li><a href="./lab5/part4.html">Link to Lab5 Part4</a></li>
                 </ul>
                 <li><a href="./lab6/index.html">Link to Lab6/7</a></li>
+                <li><a href="./lab8/index.html">Link to Lab8</a></li>
 
             </ul>
 
