--- a/midterm/index.html
+++ b/midterm/index.html
@@ -27,18 +27,20 @@
         <div>
             <h2 id="stories">Stories</h2>
             <hr>
-            <div id="img-row">
-                <div class="img-container">
-                    <img class="img" src="https://picsum.photos/200/300?random=12" alt="Random image">
-                    <h2>Card Title 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium pariatur laudantium at autem enim doloribus, amet dolorum non cum impedit. Ducimus cumque ipsa quam necessitatibus aliquam fugit reprehenderit esse eligendi.</p>
+            <div>
+                <div>
+                    <div class="img-container">
+                        <img class="img" src="https://picsum.photos/200/300?random=12" alt="Random image">
+                        <h2>Card Title 1</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium pariatur laudantium at autem enim doloribus, amet dolorum non cum impedit. Ducimus cumque ipsa quam necessitatibus aliquam fugit reprehenderit esse eligendi.</p>
+                    </div>
+                    <div class="img-container">
+                        <img class="img" src="https://picsum.photos/200/300?random=21" alt="Random image">
+                        <h2>Card Title 2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium pariatur laudantium at autem enim doloribus, amet dolorum non cum impedit. Ducimus cumque ipsa quam necessitatibus aliquam fugit reprehenderit esse eligendi.</p>
+                    </div>
+                    <div class="spacer" style="clear: both;"></div>
                 </div>
-                <div class="img-container">
-                    <img class="img" src="https://picsum.photos/200/300?random=21" alt="Random image">
-                    <h2>Card Title 2</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium pariatur laudantium at autem enim doloribus, amet dolorum non cum impedit. Ducimus cumque ipsa quam necessitatibus aliquam fugit reprehenderit esse eligendi.</p>
-                </div>
-                <div class="spacer" style="clear: both;"></div>
             </div>
         </div>
     </main>
