--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -43,6 +43,7 @@
         <input type="text" name="searchTerm" id="searchTerm">
 
         <button id="searchBtn">Search!</button>
+        <div id="contentArea"></div>
     </main>
 </body>
 </html>
