button fix, will show after click the page buttons

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -46,7 +46,11 @@
             <input type="text" name="searchTerm" id="searchTerm" value="800">
             <button id="searchBtn">Search!</button>
         </div>
-        <div id="buttonArea"></div>
+        <button  id="prev" style="display:none;">Prev.</button>
+        <button style="display:none;" id="first" value="1">First</button>
+        <span id="buttonArea"></span>
+        <button id="next" style="display:none;">next</button>
+        <button id="last" style="display:none;">Last</button>
         <div id="contentArea"></div>
     </main>
     <aside>
