add if statement to fix assignment2 errors

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <h3>Assignments:</h3>
             <ul>
                 <li><a href="./assignment1/index.html">Link to Assignment1</a></li>
+                <li><a href="./assignment2/index.html">Link to Assignment2</a></li>
             </ul>
         </section>
 
