--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -46,10 +46,10 @@
             <input type="text" name="searchTerm" id="searchTerm" value="800">
             <button id="searchBtn">Search!</button>
         </div>
-        <button  id="prev" style="display:none;">Prev.</button>
         <button style="display:none;" id="first" value="1">First</button>
+        <button  id="prev" style="display:none;">Prev.</button>
         <span id="buttonArea"></span>
-        <button id="next" style="display:none;">next</button>
+        <button id="next" style="display:none;">Next</button>
         <button id="last" style="display:none;">Last</button>
         <div id="contentArea"></div>
     </main>
